--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "WebFramework",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "typescript": "^3.8.2"
-  }
+	"name": "WebFramework",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start:db": "json-server -w db.json",
+		"start:parcel": "parcel index.html"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"typescript": "^3.8.2"
+	},
+	"dependencies": {
+		"axios": "^0.19.2"
+	}
 }
